# SC2026

./: .gitignore  CLAUDE.md  D3G_VERIFY.md  PERCEPTION.md  README.md  REFACTORING.md  REFACTOR_DESIGN.md  ROLLBACK.md  Task command.md  Track test command.md  Track test pipeline.md  lap_command.md
.claude/: settings.json
.claude/rules/: ros2-d3g.md  vision-models.md
D-Racer-Kit/: README.md
D-Racer-Kit/docs/: [5] Monitor Package.md  [6] Battery Package.md  [7] Camera Package.md  [8] Joystick & Control Package.md  [9] OpenCV Package.md
D-Racer-Kit/local_scripts/: CONTROL_DESIGN.md  LANE_DETECTION.md  lane_compare.py  lane_preview.py
D-Racer-Kit/scripts/: actuation_test.py  bag_to_video.py  camera_diagnostics.py  pwm_calibrate.py  (+2 more)
D-Racer-Kit/src/dracer_bringup/: package.xml  setup.cfg  setup.py
D-Racer-Kit/src/dracer_bringup/dracer_bringup/: launch_common.py
D-Racer-Kit/src/dracer_bringup/launch/: calibrate.launch.py  collect.launch.py  drive.launch.py  lap.launch.py  online_auto.launch.py  online_manual.launch.py  perceive.launch.py  record.launch.py  record_manual.launch.py
Env/: 전체 구조.md
Notice/: 클립보드.docx
offline/: CONTROL_DESIGN.md  LANE_DETECTION.md  PIPELINE.md  README.md  _common.py  bev_eval.py  calibrate.py  color_gate_probe.py  control_eval.py  control_predict.py  control_select.py  ctrl_feedback.py  fork_probe.py  lane7_probe.py  lane_color_probe.py  lane_compare.py  lane_preview.py  make_lane_target.py  panel_replay.py  perception_preview.py  perception_probe.py  perception_select.py  test_bev_eval.py  test_ctrl_feedback.py  track_analyze.py
(+82 files in other folders)
