<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dracer_bringup</name>
  <version>0.0.0</version>
  <description>Launch files (bring-up) for the D-Racer track-test pipeline.</description>
  <maintainer email="sooyong.park@telechips.com">topst</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>camera</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>actuator</exec_depend>
  <exec_depend>joystick</exec_depend>
  <exec_depend>monitor</exec_depend>
  <exec_depend>recorder</exec_depend>
  <exec_depend>battery</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
